# identity-platform-login-ui-operator

./: .pre-commit-config.yaml  CHANGELOG.md  CODEOWNERS  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  charmcraft.yaml  config.yaml  integration-requirements.txt  lint-requirements.txt  metadata.yaml  pyproject.toml  release-please-config.json  renovate-config.js  renovate.json  requirements.txt  tox.ini  unit-requirements.txt
.github/: copilot-instructions.md
.github/copilot/: architecture.md  testing.md  typing.md
.github/workflows/: _deploy.yaml  auto-approver.yaml  ci.yaml  cves.yaml  deploy.yaml  on_pr.yaml  on_pull_request.yaml  on_push.yaml  on_schedule.yaml  promote.yaml  publish-lib.yaml  publish.yaml  release.yaml  release_libs.yaml  renovate-approve.yaml  renovate.yaml  terraform_module.yaml  tests.yaml  tiobe.yaml  unittest.yaml  update_libs.yaml  update_libs_approve.yaml  update_libs_merge.yaml
deployment/: .terraform.lock.hcl  common.auto.tfvars  main.tf  terraform.tfstate
docs/: migration-traefik-to-istio.md
lib/charms/identity_platform_login_ui/v0/: hydra_login_ui.py  login_ui_endpoint.py
lib/charms/identity_platform_login_ui_operator/v0/: login_ui_endpoint.py  login_ui_endpoints.py
lib/charms/tenant_service/v0/: tenant_service_info.py
openspec/changes/archive/2026-06-17-replace-traefik-with-istio-ingress-route/: design.md  proposal.md  tasks.md
openspec/specs/istio-public-route/: spec.md
src/: charm.py  config.py  constants.py  exceptions.py  integrations.py  services.py  utils.py
src/grafana_dashboards/: identity-platform-login-ui-operator.json.tmpl
src/loki_alert_rules/: login_ui_high_severity_log.rule
src/prometheus_alert_rules/: accept_login_request_failed.rule  create_browser_login_flow_failed.rule  error_flow_unavailable.rule  login_flow_unavailable.rule  login_ui_proxy_error.rule  login_ui_unavailable.rule  oidc_login_flow_update_failed.rule
templates/: public-route.json.j2  route.json.j2
terraform/: MODULE_SPECS.md  main.tf  outputs.tf  variables.tf
tests/integration/: conftest.py  constants.py  test_charm.py  utils.py
tests/unit/: __init__.py  conftest.py  test_charm.py
