# Copyright 2023 Canonical Ltd.
# See LICENSE file for licensing details.

[project]
name = "identity-platform-login-ui-operator"
version = "0.0.0"
description = "Charmed Identity Platform Login UI Operator"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.10"
dependencies = [
    "cosl",
    "ops>=2.0.0",
    "lightkube==0.22.0",
    "lightkube-models<1.36",
    "jsonschema",
    "pydantic~=2.13.1",
    "tenacity~=9.1.2",
    "yarl",
    "dacite",
    "jinja2",
]

[dependency-groups]
fmt = [
    "isort",
    "ruff",
]
lint = [
    "codespell",
    "isort",
    "ruff",
    "tomli",
]
unit = [
    "pytest",
    "pytest-mock",
    "coverage[toml]",
    "ops[testing]",
]
integration = [
    "jubilant",
    "pytest",
    "requests",
    "tenacity",
]
dev = [
    "pre-commit",
    "mypy",
    "types-PyYAML",
    "types-requests",
    { include-group = "fmt" },
    { include-group = "lint" },
    { include-group = "unit" },
    { include-group = "integration" },
]

[tool.uv]
package = false

# Testing tools configuration
[tool.coverage.run]
branch = true

[tool.coverage.report]
show_missing = true

[tool.pytest.ini_options]
minversion = "6.0"
log_cli_level = "INFO"
pythonpath = ["src", "lib", "tests"]

# Linting and formatting tools configuration
[tool.codespell]
# https://github.com/codespell-project/codespell
skip = ".git,.tox,build,lib,venv,.venv,.mypy_cache,icon.svg,__pycache__"

[tool.isort]
# Profiles: https://pycqa.github.io/isort/docs/configuration/profiles.html
line_length = 99
profile = "black"

[tool.ruff]
# Default settings: https://docs.astral.sh/ruff/configuration/
# Settings: https://docs.astral.sh/ruff/settings/
line-length = 99
include = [
    "pyproject.toml",
    "src/**/*.py",
    "tests/**/*.py",
    "lib/charms/identity_platform_login_ui_operator/**/*.py"
]
extend-exclude = ["__pycache__", "*.egg_info"]
target-version = "py38"
preview = true

[tool.ruff.lint]
# Rules: https://docs.astral.sh/ruff/rules/
select = ["E", "W", "F", "C", "N", "D", "CPY"]
ignore = [
    "D100",
    "D101",
    "D102",
    "D103",
    "D105",
    "D107",
    "D203",
    "D204",
    "D213",
    "D215",
    "D400",
    "D404",
    "D406",
    "D407",
    "D408",
    "D409",
    "D413",
    "E501",
    "N818"
]
per-file-ignores = {"tests/*" = ["D100","D101","D102","D103","D104"]}

[tool.ruff.lint.flake8-copyright]
author = "Canonical Ltd."

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.mypy]
pretty = true
mypy_path = "./src:./lib/:./tests"
# Exclude non-login-ui libraries
exclude = 'lib/charms/((?!identity_platform_login_ui_operator/).)'
follow_imports = "silent"
warn_redundant_casts = true
warn_unused_configs = true
show_traceback = true
show_error_codes = true
namespace_packages = true
explicit_package_bases = true
check_untyped_defs = true
allow_redefinition = true
disallow_incomplete_defs = true
disallow_untyped_defs = true

# Ignore libraries that do not have type hint nor stubs
[[tool.mypy.overrides]]
module = ["ops.*", "pytest.*", "urllib3.*", "jinja2.*", "lightkube.*", "pytest_mock.*"]
ignore_missing_imports = true

[tool.pyright]
extraPaths = ["src", "lib"]
